# url_shortener_actix

./: .env  Cargo.toml  db.sqlite
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/entities/: mod.rs  prelude.rs  url.rs
src/routes/: url.rs
src/services/: cache.rs  db.rs
