[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dashmap = "6.1.0"
dotenv = "0.15.0"
mimalloc = { version = "0.1.48", features = ["secure"] }
nanoid = "0.4.0"
sea-orm = { version = "1.1.16", features = ["macros", "with-chrono", "sqlx-all", "runtime-tokio"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features=["actix-web"] }
utoipauto = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
debug = 0
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
